<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="ua.meugen.android.pdfcomposer.model.db.entity.PdfItemEntity"/>
        <variable name="item" type="PdfItemEntity"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeight"
        android:background="?attr/selectableItemBackground"
        android:id="@+id/container">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:id="@+id/vertical_center_guideline"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"
            android:id="@+id/horizontal_center_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_center_guideline"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/tools_pdf_name"
            android:text="@{item.name}"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/vertical_center_guideline"
            app:layout_constraintTop_toTopOf="@id/horizontal_center_guideline"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/tools_pdf_size"
            app:size="@{item.size}"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="@id/vertical_center_guideline"
            app:layout_constraintTop_toTopOf="@id/horizontal_center_guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            tools:text="@string/tools_pdf_date"
            app:date="@{item.date}"/>

    </android.support.constraint.ConstraintLayout>
</layout>