<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="ua.meugen.android.pdfcomposer.ui.activities.createnew.fragments.createnew.view.CreateNewView"/>
        <variable name="view" type="CreateNewView"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container">

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:id="@+id/vertical_center_guideline"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="horizontal"
            android:id="@+id/horizontal_center_guideline"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/button_export_to_pdf"
            android:id="@+id/export_to_pdf"
            app:onClick="@{view::exportToPdf}"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/vertical_center_guideline"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/export_to_pdf"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/button_load_image"
            app:onClick="@{view::loadImage}"
            android:id="@+id/load_image"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@id/vertical_center_guideline"
            app:layout_constraintBottom_toTopOf="@id/export_to_pdf"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/button_add_page"
            app:onClick="@{view::addPage}"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_center_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="@dimen/default_margin"
            android:src="@drawable/ic_photo_size_select_actual_black_48dp"
            android:scaleType="centerInside"
            android:id="@+id/image"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/horizontal_center_guideline"
            app:layout_constraintBottom_toTopOf="@id/load_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:id="@+id/text"
            android:inputType="text"/>

    </android.support.constraint.ConstraintLayout>
</layout>